# init

src/: CMakeLists.txt
src/src/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt
src/test/gtest/: CMakeLists.txt  gtest-all.cpp  gtest_main.cc
